src/objects/Country_Commercial__kav.object
<CustomObject><fields>
        <fullName>Approval_Queue__c</fullName>
        <description>ITA Business Unit</description>
        <inlineHelpText>Select the ITA business unit that is the owner of this content.</inlineHelpText>
        <label>Approval Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Global Markets</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Atom Approver</description>
        <inlineHelpText>Atom Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Country_Commercials</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is where the body of your content should be placed. The content should not deviate from the overall theme and should stand on its own as a reliable source of information. Otherwise, a new topic should be created.</inlineHelpText>
        <label>Atom</label>
        <length>131072</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Daft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the draft version is ready for approval</description>
        <inlineHelpText>Check this box, if your document is ready to go into workflow. If you're completely satisfied with your draft, then click "Submit for Approval" button.</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Level_1__c</fullName>
        <description>Related Chapter of a Country Commercial Guide</description>
        <inlineHelpText>Select the applicable chapter from the publication that your content belongs to.</inlineHelpText>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Doing Business in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political &amp; Economic Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling US Products &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leading Sectors for US Exports &amp; Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Regulations, Customs, &amp; Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Climate Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade &amp; Project Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_2__c</fullName>
        <description>Related Section of the Related Chapter of a Country Commercial Guide</description>
        <inlineHelpText>Choose the section within the chapter that your content is associated with.</inlineHelpText>
        <label>Level 2</label>
        <picklist>
            <controllingField>Level_1__c</controllingField>
            <picklistValues>
                <fullName>Market Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Entry Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using an Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establishing an Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Ventures/Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling to the Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution &amp; Sales Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Factors &amp; Techniques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Promotion &amp; Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Service/Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protecting Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principle Business Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Prospect Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Tariffs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Barriers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Requirements &amp; Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labeling/Marking Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Export Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prohibited &amp; Restricted Imports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mobile_Title__c</fullName>
        <description>This is the title that will display on mobile sites</description>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Public_URL__c</fullName>
        <description>Full Public URL for Article</description>
        <formula>HYPERLINK($Label.export_gov&amp;"/article?id="&amp;UrlName, $Label.export_gov&amp;"/article?id="&amp;UrlName)</formula>
        <label>Public URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>References__c</fullName>
        <defaultValue>"Prepared by our U.S. Embassies abroad.  With its network of 108 offices across the United States and in more than 75 countries, the U.S. Commercial Service of the U.S. Department of Commerce utilizes its global presence and international marketing expertise to help U.S. companies sell their products and services worldwide. Locate the U.S. Commercial Service trade specialist in the U.S. nearest you by visiting http://export.gov/usoffices."</defaultValue>
        <description>Article references</description>
        <inlineHelpText>If there are any references that were used during the writing of the content, they can be highlighted here. The rich text editor allows for formatting and link creation.</inlineHelpText>
        <label>References (Public)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Creates relationship to Publications</description>
        <inlineHelpText>Type a keyword, such as country name and click the magnifying glass to search available Publications.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Country Commercial</value>
            </filterItems>
            <infoMessage>Search by Country name to find a Country Commercial Guide</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Country Commercial Guide Articles</relationshipLabel>
        <relationshipName>Country_Commercial_Guides</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an article through an approval process</description>
        <inlineHelpText>Stage is the phase of the process that your content is in.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Country Commercials</relationshipLabel>
        <relationshipName>Country_Commercials</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>level_0__c</fullName>
        <description>Dummy field to streamline KM.</description>
        <label>Level 0</label>
        <picklist>
            <picklistValues>
                <fullName>Country Commercial Guide</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>CCG</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Input form to capture individual sections of a Country Commercial Guide</description><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><label>Country Commercial</label><pluralLabel>Country Commercials</pluralLabel><validationRules>
        <fullName>Required_Level_1</fullName>
        <active>false</active>
        <description>Level 1 is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Level_1__c))</errorConditionFormula>
        <errorMessage>Please pick Level 1 (Mandatory field)</errorMessage>
    </validationRules><validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Article Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules></CustomObject>